--- a/WebContent/public/css/canvas-style.css
+++ b/WebContent/public/css/canvas-style.css
@@ -1,7 +1,7 @@
 #canvasDiv {
     border: 1px solid;
     width: 560px;
-    height: 280;
+    height: 280px;
 }
 
 .color li {
@@ -22,4 +22,10 @@
 
 .selectedColor {
     border:2px solid #000 !important;
+}
+
+
+#colorSample {
+    height: 5em;
+    width: 100%;
 }
