--- a/WebContent/public/css/main-style.css
+++ b/WebContent/public/css/main-style.css
@@ -6,3 +6,18 @@
 #page {
 
 }
+
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.border-sm{
+    border: solid 1px black;
+    border-radius: 5px;
+}
