--- a/WebContent/public/css/room-style.css
+++ b/WebContent/public/css/room-style.css
@@ -8,7 +8,14 @@
 }
 
 .message {
-    height: 3em;
+    min-height: 3em;
+    height: auto;
+
+}
+
+ul {
+    list-style-type: none;
+    list-style-position: inside;
 }
 
 
